--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,14 +1,14 @@
-name: "bad workflow"
+name: "Fixed Workflow"
 on:
   issues:
     types: [opened]
-description: "insecure and useless"
-branding:
-  icon: box
-  color: blue
-runs:
-  using: "composite"
-  steps:
-    - shell: bash
-      run: |
-        echo github.event.issue.body > issues.txt
+
+jobs:
+  handle_issue:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Print issue body
+      run: echo ${{ github.event.issue.body }} > issues.txt
+      shell: bash
