--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,4 +11,6 @@ jobs:
       uses: actions/checkout@v2
     - name: Print issue body
       run: echo ${{ github.event.issue.body }} > issues.txt
+      env:
+        MY_API_KEY: secrets.MY_API_KEY
       shell: bash
