--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,5 +12,5 @@ jobs:
     - name: Print issue body
       run: echo ${{ github.event.issue.body }} > issues.txt
       env:
-        MY_API_KEY: secrets.MY_API_KEY
+        MY_API_KEY: ${{secrets.MY_API_KEY}}
       shell: bash
